# simpleFileSystem

./: CMakeLists.txt  README.md
data/: image.5
src/include/: disk.h  fs.h
src/shell/: sfssh.cpp
test/: test_00_debug.sh  test_01_format.sh  test_02_mount.sh  test_03_stat.sh  test_04_create.sh  test_05_copyout.sh  test_06_cat.sh  test_07_copyout.sh  test_08_remove.sh  test_09_valgrind.sh
